SOC-1908 | right rail spacing fixed

--- a/front/main/app/styles/component/_discussion-app-promotion.scss
+++ b/front/main/app/styles/component/_discussion-app-promotion.scss
@@ -5,7 +5,7 @@ $discussion-app-join-text-line-height: 125%;
 
 $discussion-app-join-text-spacing-top: (
 	details-view: 85px,
-	list-view: 67px
+	list-view: 42px
 );
 
 .discussion-app-promotion {
