--- a/front/main/app/styles/component/_discussion-filters.scss
+++ b/front/main/app/styles/component/_discussion-filters.scss
@@ -33,10 +33,6 @@ $legend-font-size: 16px;
 		}
 	}
 
-	.moderation-checkbox-label {
-		padding-top: 18px;
-	}
-
 	legend {
 		color: $discussion-filters-color;
 		font-size: $legend-font-size;
@@ -117,6 +113,7 @@ $legend-font-size: 16px;
 		align-items: flex-start;
 		display: flex;
 		line-height: $type-smallest;
+		padding-top: 18px;
 	}
 
 	.fancy-checkbox {
@@ -149,7 +146,7 @@ $legend-font-size: 16px;
 
 .rail {
 	.discussion-filters {
-		padding-top: 100px;
+		padding-top: 85px;
 		width: auto;
 
 		legend {
@@ -158,6 +155,10 @@ $legend-font-size: 16px;
 
 		label {
 			line-height: $line-height-smallest;
+		}
+
+		.moderation-checkbox-label {
+			padding-top: 13px;
 		}
 	}
 }
